Randomises quotes and displays on web page

--- a/RandomQuotePage.html
+++ b/RandomQuotePage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<title>
 			Random Inspirational Quote Generator
 		</title>
-		<script src="C:\Users\matth\OneDrive\Documents\Javascript projects\RandomQuoteGen.js"></script>
 	</head>
 	<body>
 		<div style="display: flex; justify-content: center;">
@@ -12,5 +12,9 @@
 		<div style="display: flex; justify-content: center;">
 			<button onClick="genQuote()">Generate random quote</button>
 		</div>
+		<div id="showQuote">
+			<!-- Quotes displayed here -->
+		</div>
+		<script src="C:\Users\matth\OneDrive\Documents\Javascript projects\RandomQuoteGen.js"></script>
 	</body>
 </html>
