--- a/RandomQuotePage.html
+++ b/RandomQuotePage.html
@@ -15,6 +15,6 @@
 		<div id="showQuote">
 			<!-- Quotes displayed here -->
 		</div>
-		<script src="C:\Users\matth\OneDrive\Documents\Javascript projects\RandomQuoteGen.js"></script>
+		<script src="RandomQuoteGen.js"></script>
 	</body>
 </html>
