Completed project - now allows addition of quotes

--- a/RandomQuotePage.html
+++ b/RandomQuotePage.html
@@ -6,14 +6,22 @@
 		</title>
 	</head>
 	<body>
-		<div style="display: flex; justify-content: center;">
+		<div>
 			<h1>Random Inspirational Quote Generator</h1>
 		</div>
-		<div style="display: flex; justify-content: center;">
+		<div>
 			<button onClick="genQuote()">Generate random quote</button>
 		</div>
 		<div id="showQuote">
 			<!-- Quotes displayed here -->
+		</div>
+		<div>
+			<button onClick="addQuote()">Add quote</button>
+		</div>
+		<div>
+			<textarea id="addQuoteTextArea">
+				
+			</textarea>
 		</div>
 		<script src="RandomQuoteGen.js"></script>
 	</body>
